feat(category): implement categories crud operations and document them
